--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
       </div>
     </header>
     <section class="container">
-      <section class="products">
-        <ul id="list"></ul>
-      </section>
+      <section class="products"></section>
       <section class="cart">
         <ol class="cart__products"></ol>
         <p class="price">Subtotal <span>R$<span class="total-price">0</span></span></p>
